perubahan di container

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <style>
       .container {
-        border: 2px;
+        border-style:solid;
+        border-color: #000f50;
         border-radius: 5%;
         width: 200px;
         height: 100px;
