--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
       .container {
         border-style:solid;
+        border:2px;
         border-color: #000f50;
         border-radius: 5%;
         width: 200px;
