perubahan di container

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       }
     </style>
   </head>
-  <body>
-    <div class="container">
-      <p style="align-items: center">
+  <body style="align-items: center;">
+    <div class="container"  style="align-items: center">
+      <p>
         Ini pages untuk tugas Infrastruktur dan Platform Sains Data
       </p>
     </div>
