--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       }
     </style>
   </head>
-  <body style="align-items: center;">
-    <div class="container"  style="align-items: center">
-      <p>
+  <body>
+    <div class="container">
+      <p style="align-items: center">
         Ini pages untuk tugas Infrastruktur dan Platform Sains Data
       </p>
     </div>
