perubahan di container

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .container {
+      .container{
         border-style:solid;
         border:2px;
         border-color: #000f50;
@@ -14,8 +14,11 @@
         height: 100px;
       }
       .footer{
+        border-style: solid;
+        border-radius: 5%;
         width: 100vw;
-        height: 100vh;
+        height: 10vh;
+        position: sticky top;
       }
     </style>
   </head>
