perubahan di container

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       .container{
         border-style:solid;
-        border:2px;
+        border-width:2px;
         border-color: #000f50;
         border-radius: 5%;
         width: 200px;
@@ -18,7 +18,7 @@
         border-radius: 5%;
         width: 100vw;
         height: 10vh;
-        position: sticky top;
+        position: sticky bottom;
       }
     </style>
   </head>
@@ -35,7 +35,7 @@
 </br>
 </br>
 <div class="footer">
-    <h2 style="text-align: center;">CR = Copy Right</br>
+    <h2 style="text-align: center;">CR = CopyRight</br>
     By Roni Isa Mahendra</h2>
 </div>
   </body>
