--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="align-items:center;">
       <p style="align-items: center">
         Ini pages untuk tugas Infrastruktur dan Platform Sains Data
       </p>
