perubahan di container

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         border-radius: 5%;
         width: 200px;
         height: 100px;
+        display:grid;
+        align-items: center;
       }
       .footer{
         border-style: solid;
         width: 100vw;
         height: 10vh;
-        position: sticky bottom;
+        position: sticky;
       }
     </style>
   </head>
