perubahan di container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         height: 100px;
         display:grid;
         align-items: center;
+        justify-content: center;
       }
       .footer{
         border-style: solid;
@@ -24,7 +25,7 @@
   </head>
   <body>
     <div class="container" style="align-items:center;">
-      <p style="align-items: center">
+      <p>
         Ini pages untuk tugas Infrastruktur dan Platform Sains Data
       </p>
     </div>
