perubahan di container

--- a/index.html
+++ b/index.html
@@ -5,42 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .container {
-        border-style: solid;
+      .container{
+        border-style:solid;
         border-color: #000f50;
         border-radius: 5%;
         width: 200px;
         height: 100px;
-        display: flex; /* Mengaktifkan Flexbox */
-        justify-content: center; /* Menyelaraskan konten secara horizontal */
-        align-items: center; /* Menyelaraskan konten secara vertikal */
+        display:grid;
+        align-items: center;
+        justify-content: center;
       }
-      .footer {
+      .footer{
         border-style: solid;
         width: 100vw;
         height: 10vh;
         position: sticky;
-        bottom: 0; /* Memastikan footer berada di bawah */
       }
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="align-items:center;">
       <p>
         Ini pages untuk tugas Infrastruktur dan Platform Sains Data
       </p>
     </div>
     </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    <div class="footer">
-      <h2 style="text-align: center;">
-        CR = CopyRight</br>
-        By Roni Isa Mahendra
-      </h2>
-    </div>
+</br>
+</br>
+</br>
+</br>
+</br>
+<div class="footer">
+    <h2 style="text-align: center;">CR = CopyRight</br>
+    By Roni Isa Mahendra</h2>
+</div>
   </body>
 </html>
