memperbarui html untuk laporan

--- a/tugas_2/laporan.html
+++ b/tugas_2/laporan.html
@@ -1,3 +1,17 @@
-"Berisi pesan yang banyak mengandung kata-kata terkait media yang tidak disertakan.",
-        "berisi konjungsi dalam bahasa jawa seperti iku(itu), ameh(ingin), dan kata sambung 'e' yang tergantung konteks",
-        "berisi kata tidak dan ada"
+,<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Laporan hasil clustering</h2>
+    <img src="hasil cluster.png"></br>
+    <p> Berisi pesan yang banyak mengandung kata-kata terkait media yang tidak disertakan,</br>
+        berisi konjungsi dalam bahasa jawa seperti iku(itu), ameh(ingin), dan kata sambung 'e' yang tergantung konteks,</br>
+        berisi kata tidak dan ada</br>
+    </p>
+
+</body>
+</html>
