memperbarui html untuk laporan

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
     <h2 style="text-align: center;">CR = CopyRight</br>
     By Roni Isa Mahendra</h2>
 </div>
+<div>
+  <h2 href="tugas_2/laporan.html">link laporan tugas 2</h2>
+</div>
   </body>
 </html>
