memperbarui html untuk laporan

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     By Roni Isa Mahendra</h2>
 </div>
 <div>
-  <h2 href="tugas_2/laporan.html">link laporan tugas 2</h2>
+  <a href="tugas_2/laporan.html">link laporan tugas 2</a>
 </div>
   </body>
 </html>
