--- a/tugas_2/laporan.html
+++ b/tugas_2/laporan.html
@@ -12,6 +12,6 @@
         berisi konjungsi dalam bahasa jawa seperti iku(itu), ameh(ingin), dan kata sambung 'e' yang tergantung konteks,</br>
         berisi kata tidak dan ada</br>
     </p>
-
+    <a href="https://github.com/ums-L200220212/ums-L200220212.github.io/tree/main/tugas_2">link file keseluruhan</a>
 </body>
 </html>
