memperbarui html untuk laporan

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>
         Ini pages untuk tugas Infrastruktur dan Platform Sains Data
       </p>
-      <a href="laporan.html">link laporan tugas 2</a>
+      <a href="tugas_2/laporan.html">link laporan tugas 2</a>
     </div>
     </br>
 </br>
